testdata/e2e/examples/apply-outputs/resources.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: first
data:
  foo: bar
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: second
data:
  foo: bar
