testdata/e2e/examples/apply-outputs/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-outputs
spec:
  template: true
  steps:
  - try:
    - apply:
        file: resources.yaml
        outputs:
        - match:
            metadata:
              name: first
          name: foo
          value: (@)
    - script:
        env:
        - name: FOO
          value: (to_string($foo))
        content: |
          set -e
          echo $FOO
    - assert:
        resource:
          ($foo):
            apiVersion: v1
            kind: ConfigMap
            metadata:
              name: first
